--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
        "optimist": ">=0.2.4",
        "prompt": "0.1.x",
        "levenshtein": "1.0.x",
-       "colors": "0.5.x"
+       "colors": "0.5.x",
+       "ntwitter": "0.2.x"
      }, 
     "engine": [
         "node 0.4.x" 
