--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     },
     "main": "./lib/twitter",
     "dependencies": {
-       "hook.io": "0.4.x",
+       "hook.io": "0.6.x",
        "optimist": ">=0.2.4",
        "prompt": "0.1.x",
        "levenshtein": "1.0.x",
        "colors": "0.5.x",
-       "ntwitter": "0.2.x"
+       "ntwitter": "0.2.x",
+       "languagedetect", "0.0.x"
      }, 
     "engine": [
         "node 0.4.x" 
