--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
        "levenshtein": "1.0.x",
        "colors": "0.5.x",
        "ntwitter": "0.2.x",
-       "languagedetect", "0.0.x"
+       "languagedetect": "0.0.x"
      }, 
     "engine": [
         "node 0.4.x" 
