--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
        "colors": "0.5.x",
        "ntwitter": "0.2.x",
        "languagedetect": "0.0.x",
-       "bitly": "1.1.x"
+       "bitly": "1.x.x"
      }, 
     "engine": [
         "node 0.4.x" 
